--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
     <p class="arredondadas">bordas arredondadas</p>
     <p class="arredondadas-2">bordas arredondadas-2</p>
 
+    <!-- 22 box model -->
+
+    <div class="box-model">
+        <p>Tenho todas as propriedade do box Model</p>
+    </div>
+
+    <!-- 23 desafio -->
+
+    <div id="box-model-desafio">
+        <h2 class="desafio-title">Vamos estilizar</h2>
+    </div>
 
 </body>
 </html>
+
+
