--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
         <h2 class="desafio-title">Vamos estilizar</h2>
     </div>
 
+    <!-- 24 alinhamentos-->
+    <p class="text-aligned">alinhando a esquerda</p>
+
+    <div class="container-center">
+        <h2>Estamos centralizados</h2>
+        <p>Algum texto</p>
+    </div>
 </body>
 </html>
 
